--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {н
+  "devDependencies": {
     "gh-pages": "^3.0.0",
     "react-test-renderer": "^16.8.6"
   }
